tests/snapshots/tests__function.snap
---
source: tests/tests.rs
expression: processed_content
---
function preamble
```rust
#use std::fmt;
#struct TestStruct {
#    name: String,
#    value: i32,
#}
#impl TestStruct {
#    fn new(name: &str, value: i32) -> Self {
#        Self {
#            name: name.to_string(),
#            value,
#        }
#    }
#    fn print(&self) {
#        println!("Name: {}, Value: {}", self.name, self.value);
#    }
#}
#enum TestEnum {
#    A,
#    B(i32),
#    C { name: String },
#}
#trait TestTrait {
#    fn test_method(&self) -> String;
#    fn default_method(&self) -> i32 {
#        42
#    }
#}
#impl TestTrait for TestStruct {
#    fn test_method(&self) -> String {
#        format!("TestStruct: {}", self.name)
#    }
#}
fn free_function() {
    println!("Hello, world! \\{");
}
```
after function preamble
