tests/snapshots/tests__function_body_with_display_start_only.snap
---
source: tests/tests.rs
expression: processed_content
---
Function with display start only
```rust
# use std::fmt;
# fn function_with_display_markers() {
#     let x = 10;
#     let y = 20;
#     let result = x + y;
#     println!("Result: {}", result);
#     println!("Done!");
# }
# fn function_with_display_end_only() {
#     println!("This is visible");
#     let calculation = 42;
#     println!("The answer is: {}", calculation);
#     println!("Cleanup operations");
# }
# fn function_without_markers() {
#     let a = 5;
#     let b = 7;
#     let sum = a + b;
#     println!("{} + {} = {}", a, b, sum);
# }
# fn main() {
# // Hidden setup
# let name = "World";
#
# // DISPLAY START
// Everything from here should be visible
println!("Hello, {}!", name);
let message = format!("Welcome to Rust");
println!("{}", message);
# }
```
after Function with display start only
