tests/snapshots/tests__method_extraction.snap
---
source: tests/tests.rs
assertion_line: 94
expression: processed_content
---
Method extraction test
```rust
fn new(name: &str, value: i32) -> Self {
    Self {
        name: name.to_string(),
        value,
    }
}
```
after Method extraction test
